06-Oct-2013 Added XcodeBuilder-dev builder.

29-Sep-2013 Added C.ICCompilerOptions.LanguageStandard enumeration option. Usual mapping of C89/C99 or C++98/11.

22-Sep-2013 Modules implementing the new Opus.Core.ICommonOptionCollection interface now intersect all their child option collections into a common set. These can be used as deltas for use in some builders.

21-Sep-2013 Added property EncapsulatingNode to Opus.Core.DependencyNode, as the DependencyNode in which this node resides. For example, if you are inspecting an ObjectFile within an Application, the encapsulating node is the Application.

18-Sep-2013 Added Opus.Core.BaseOptionCollection.Complement() function, to find the delta of two BaseOptionCollections.

17-Sep-2013 Added Opus.Core.Array.AddUnique method.

29-Aug-2013 Adding Opus.Core.Location which is an abstraction for a location on disk. Opus.Core.BaseModule has a dictionary of Locations, and a primary PackageLocation. This simplifies the Include and Exclude functionality to locate files, but is a breaking change to the API. Generally, for Include(this, ...) older style API, replace with Include(this.PackageLocation, ...). IModuleCollection.GetChildModule, used to update option collections on an individual source file, has been replaced with IModuleCollection.RegisterUpdateOptions

28-Aug-2013 Adding LLVMGcc-4.2 package for OSX.

19-Jul-2013 Reduced the number of ways to create an Opus.Core.DependencyNode to simplify the code.

18-Jul-2013 Added zeromq-3.2.3 package.

13-Jul-2013 Added Opus.Core.RelativePathUtilities.GetCommonRoot to find the common root between two paths. If there is no common root, null is returned.

13-Jul-2013 Opus.Core.File.ToString() now displays the path if it has been set.
